fix(homepage): update nav padding + z-index of carousel

--- a/src/components/Layout/Header.module.scss
+++ b/src/components/Layout/Header.module.scss
@@ -5,12 +5,16 @@
   align-items: center;
   justify-content: space-between;
   min-height: 140px;
-  padding: 18px var(--main-padding-sm);
-  padding-left: 10px;
+  padding: 18px var(--layout-margin-big-lg);
 
   @media (max-width: $breakpoint-md) {
     min-height: 90px;
-    padding-left: 0;
+    padding-left: var(--layout-margin-big-md);
+    padding-right: var(--layout-margin-big-md);
+  }
+  @media (max-width: $breakpoint-sm) {
+    padding-left: 36px;
+    padding-right: var(--layout-margin-big-sm);
   }
 }
 
@@ -20,6 +24,7 @@
   align-items: center;
   color: var(--color-black);
   font-size: 24px;
+  margin-left: -40px;
 
   span {
     display: none;
