--- a/src/containers/Homepage/HomeHero.module.scss
+++ b/src/containers/Homepage/HomeHero.module.scss
@@ -12,6 +12,8 @@
   display: flex;
   flex-direction: column;
   width: 52.76%;
+  position: relative;
+  z-index: 2;
 }
 .right {
   flex: 1;
